<resources>
    <string name="app_name">Dating Application</string>

    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">LOGIN</string>
    <string name="meet_people">Meet new people, Family &amp; Friends</string>

    <string name="name">Fadejimi Adegbulugbe</string>
    <string name="title">Android Developer</string>
    <string name="company_name">Shixels Studio LTD</string>

    <string name="nav_feed">Feeds</string>
    <string name="nav_events">Events</string>
    <string name="nav_post">Posts</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_account">Account</string>
    <string name="nav_logout">Logout</string>

    <string name="posted">Posted</string>
    <string name="shared">Shared</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_id">375753446140336</string>
    <string name="fb_login_protocol_scheme">fb375753446140336</string>

    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
</resources>
