<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/icon_group1"
        android:checkableBehavior="single">
        <item android:id="@+id/nav_feed"
            android:icon="@drawable/ic_new_feed"
            android:title="@string/nav_feed" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_events"
            android:title="@string/nav_events" />
        <item
            android:id="@+id/nav_post"
            android:icon="@drawable/ic_post"
            android:title="@string/nav_post" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/nav_notifications" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/nav_account" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_logout" />
    </group>
</menu>
