<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.shixelsexcercise.LoginActivity"
    android:background="@color/colorPrimary">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:src="@drawable/logo"
            android:id="@+id/logo_image"
            android:adjustViewBounds="false"
            android:scaleType="centerCrop"
            android:layout_marginTop="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_image"
            android:id="@+id/text_view"
            android:text="@string/meet_people"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_edittext"
            android:drawableLeft="@drawable/ic_username"
            android:drawableStart="@drawable/ic_username"
            android:hint="@string/username"
            android:background="@drawable/edit_text_style"
            android:layout_below="@+id/text_view"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:drawablePadding="10dp"
            android:drawableTint="@color/colorPrimaryDark"/>

        <com.maksim88.passwordedittext.PasswordEditText
            android:id="@+id/password_edittext"
            app:pet_disableIconAlpha="true"
            app:pet_hoverShowsPw="true"
            android:gravity="start"
            fontPath="fonts/Roboto-Thin.ttf"
            android:textAlignment="viewStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="5dp"
            android:hint="@string/password"
            android:background="@drawable/edit_text_style"
            android:layout_below="@+id/username_edittext"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_password"
            android:drawableLeft="@drawable/ic_password"
            android:drawableTint="@color/colorPrimaryDark"
            android:drawablePadding="10dp" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/rememberCheckBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/password_edittext"
            android:text="@string/remember_me"
            android:textColor="#FFF"
            android:layout_marginTop="10dp"
            android:button="@drawable/checkbox_style"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rememberCheckBox"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:paddingEnd="5dp"
            android:paddingStart="10dp"
            android:theme="@style/MyButton"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="20dp"/>
    </RelativeLayout>
</RelativeLayout>
